# weather-chatbot-backend

./: .env_example  .gitignore  README.md  pyproject.toml
docs/:  database_layer.md  README.md  aPI_endpoints.md  api_endpoints.md  architecture.md  authentication_system.md  best_practices.md  configuration_management.md  deployment_guide.md  email_system.md  environment-setup.md  error_handling.md  llm_integration.md  overview.md  project-structure.md  services_layer.md  setup-installation.md  testing.md  weather_services.md
src/: app.py  config.py  llm_schema.py  main.py
src/models/: schemas.py  users.py
src/routers/: auth.py  chat.py  root.py
src/services/: email_services.py  helper.py  service.py  weather_service.py
src/templates/: verification_email.html
src/test/: test_services.py
weather_forecast_chatbot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
