[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weather-forecast-chatbot"
version = "0.1.0"
description = "Weather chatbot backend with FastAPI + OpenWeather and Ollama LLM"
authors = [{ name = "example", email = "example@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.0",
    "uvicorn>=0.35.0",
    "requests>=2.31.0",
    "python-dotenv>=1.1.1",
    "google-genai>=1.46.0"
]

[tool.setuptools]
packages = ["src"]